--- a/match-web/app/index.html
+++ b/match-web/app/index.html
@@ -17,6 +17,7 @@
   <link rel="stylesheet" href="bower_components/angular-bootstrap/ui-bootstrap-csp.css">
   <link rel="stylesheet" href="bower_components/components-font-awesome/css/font-awesome.css">
   <link rel="stylesheet" href="bower_components/bootstrap-switch/dist/css/bootstrap3/bootstrap-switch.css">
+  <link rel='stylesheet' href='bower_components/angular-loading-bar/build/loading-bar.css' type='text/css' media='all' />
 
   <!-- put css here-->
   <link rel="stylesheet" href="app.css">
@@ -59,6 +60,7 @@
   <script src="bower_components/angular-resource/angular-resource.js"></script>
   <script src="bower_components/angular-messages/angular-messages.js"></script>
   <script src="bower_components/angular-bootstrap-switch/dist/angular-bootstrap-switch.js"></script>
+  <script src='bower_components/angular-loading-bar/build/loading-bar.js'></script>
   <!-- put ng plugins here-->
 
   <script src="app.js"></script>
